redis caching enabled for bulk locations and practitioners
